<resources>
    <string name="app_name">Word Bank</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">278711329375645</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb278711329375645</string>
    <string name="facebook_app_id">278711329375645</string>
    <string name="fb_login_protocol_scheme">fb278711329375645</string>

    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="title_activity_words">WordsActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="Save">Save</string>
    <string name="name">Name</string>
    <string name="meaning">Meaning</string>
    <string name="translate">Translate</string>
    <string name="word_list">Word List</string>
    <string name="add_word">Add Word</string>
    <string name="added">Added</string>
    <string name="learning">Learning</string>
    <string name="learned">Learned</string>
    <string name="edit">Edit</string>
    <string name="set_as_learning">Set as learning</string>
    <string name="set_as_learned">Set as Learned</string>
    <string name="filter_by_learning">Filter by learning</string>
    <string name="filter_by_learned">Filter by learned</string>
    <string name="filter_by_added">Filter by added</string>
    <string name="show_all">Show all</string>
    <string name="filter_by_date_range">Filter by date range</string>
    <string name="delete">Delete</string>
    <string name="other">Others</string>
    <string name="filters">Filters</string>
</resources>
