<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_edit"
        app:showAsAction="ifRoom|withText"
        android:title="@string/edit"
        android:visible="true"/>
    <item
        android:id="@+id/item_set_as_learning"
        app:showAsAction="ifRoom|withText"
        android:title="@string/set_as_learning"
        android:visible="true"/>
    <item
        android:id="@+id/item_set_as_learned"
        app:showAsAction="ifRoom|withText"
        android:title="@string/set_as_learned"
        android:visible="true"/>
    <item
        android:id="@+id/item_delete"
        app:showAsAction="ifRoom|withText"
        android:title="@string/delete"
        android:visible="true"/>
    <item
        android:id="@+id/item_shared"
        app:showAsAction="ifRoom|withText"
        android:title="@string/shared"
        android:visible="true"/>
</menu>